# isPowerOfTwo

./: .pypirc  README.md  pyproject.toml
.github/workflows/: python-publish.yml
isPowerOfTwo/: .pypirc
isPowerOfTwo/src/isPowerOfTwo.egg-info/: PKG-INFO  SOURCES.txt
