[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "isPowerOfTwo"
version = "1.0.0"
authors = [
  { name="Omkar Ingale", email="omkar001@duck.com" },
]
description = "A package to determine if a given number is a power of 2"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/IngaleOmkar/isPowerOfTwo"
"Bug Tracker" = "https://github.com/IngaleOmkar/isPowerOfTwo/issues"